feat: complete authentication flow

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # PostgreSQL connection string
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
+
+# JWT signature secret, e.g. generated via `openssl rand -base64 32`
+AUTH_SECRET="replace-with-strong-secret"
