--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "prisma:generate": "prisma generate",
     "prisma:db-push": "prisma db push",
     "prisma:migrate:dev": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "create-user": "tsx scripts/create-user.ts"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^6.18.0",
     "@prisma/client": "^6.18.0",
     "@tanstack/react-query": "^5.90.6",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "16.0.1",
     "pg": "^8.16.3",
     "react": "19.2.0",
@@ -24,16 +27,19 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.24",
     "@types/pg": "^8.15.6",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
+    "eslint": "^9.39.1",
     "eslint-config-next": "16.0.1",
     "prisma": "^6.18.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.16",
+    "tsx": "^4.19.2",
+    "typescript": "^5.9.3",
+    "dotenv": "^17.2.3"
   }
 }
