--- a/package.json
+++ b/package.json
@@ -4,24 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate --no-engine && next build",
     "start": "next start",
     "lint": "eslint",
     "type-check": "tsc --noEmit",
-    "prisma:generate": "prisma generate",
+    "prisma:generate": "prisma generate --no-engine",
     "prisma:db-push": "prisma db push",
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "create-user": "tsx scripts/create-user.ts"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^6.18.0",
     "@prisma/client": "^6.18.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@tanstack/react-query": "^5.90.6",
     "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "next": "16.0.1",
-    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zustand": "^5.0.8"
@@ -34,12 +33,12 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "babel-plugin-react-compiler": "1.0.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.1",
     "prisma": "^6.18.0",
     "tailwindcss": "^4.1.16",
     "tsx": "^4.19.2",
-    "typescript": "^5.9.3",
-    "dotenv": "^17.2.3"
+    "typescript": "^5.9.3"
   }
 }
