--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "@tanstack/react-query": "^5.90.6",
     "bcryptjs": "^3.0.3",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^6.1.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
