--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.24",
     "@types/pg": "^8.15.6",
