--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "prisma generate --no-engine && next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint src --config eslint.config.mjs",
     "type-check": "tsc --noEmit",
     "prisma:generate": "prisma generate --no-engine",
     "prisma:db-push": "prisma db push",
