feat: batch import from cli

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "create-user": "tsx scripts/create-user.ts",
+    "data:import": "tsx scripts/import-data.ts",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
